// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterMargin renders 0 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: 0;
  filter-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 0;
  filter-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 0;
  filter-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 0;
  filter-margin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders function 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: hasnot;
  filter-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: has;
  filter-margin: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: hasnot;
  filter-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: has;
  filter-margin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: invalid.path.1;
  filter-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: invalid.path.1;
  filter-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: invalid.path.1;
  filter-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: invalid.path.1;
  filter-margin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders negative number 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: -54881;
  filter-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: -54881;
  filter-margin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: -42365;
  filter-margin: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: -42365;
  filter-margin: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: January;
  filter-margin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: January;
  filter-margin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: July;
    filter-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: July;
    filter-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

@media May {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

@media May {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: April;
  filter-margin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: January;
    filter-margin: January;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: April;
  filter-margin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: January;
    filter-margin: January;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-filter-margin: July;
    filter-margin: July;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-filter-margin: July;
    filter-margin: July;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: September;
    filter-margin: September;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: November;
    filter-margin: November;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: August;
    filter-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter-margin: January;
    filter-margin: January;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter-margin: January;
    filter-margin: January;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: December;
    filter-margin: December;
  }
}

@media January {
  .c0 {
    -webkit-filter-margin: April;
    filter-margin: April;
  }
}

@media April {
  .c0 {
    -webkit-filter-margin: May;
    filter-margin: May;
  }
}

@media June {
  .c0 {
    -webkit-filter-margin: June;
    filter-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: 54881;
  filter-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 54881;
  filter-margin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 42365;
  filter-margin: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: 42365;
  filter-margin: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders string 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: July;
  filter-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: June;
  filter-margin: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: June;
  filter-margin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`filterMargin renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`filterMargin renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter-margin: DarkSlateBlue;
  filter-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: DarkSlateBlue;
  filter-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: DarkSlateBlue;
  filter-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter-margin: DarkSlateBlue;
  filter-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
